# alsa-lib

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.conf.in  Makefile.in  NOTES  README.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  cvscompile  gitcompile  hgcompile  ltconfig  mkinstalldirs
aserver/: Makefile.am  aserver.c
doc/: Makefile  Makefile.am  Makefile.in  README.1st  alsa-lib.html  alsa-lib.lyx  asoundrc.doc  asoundrc.txt  conf.doxygen  confarg.doxygen  conffunc.doxygen  doxygen.cfg  doxygen.cfg.in  index.doxygen  pcm.doxygen  pcmbuf.fig  pcmbuf.ps  pcmbuf1.fig  pcmbuf1.ps  plan.txt  soundapi-1.html  soundapi-2.html  soundapi-3.html  soundapi-4.html  soundapi-5.html  soundapi.html  soundapi.sgml  soundapi.txt
doc/pictures/: Makefile.am  ucm-seq-boot.puml  ucm-seq-device.puml  ucm-seq-verb.puml  ucm-volume.puml
include/: Makefile.am  Makefile.in  alisp.h  alsa-symbols.h  aserver.h  asoundef.h  asoundlib-head.h  asoundlib.h  bswap.h  conf.h  config.h  config.h.in  control.h  control_external.h  control_m4.h  control_plugin.h  conv.h  error.h  footer.h  global.h  header.h  hwdep.h  hwdep_m4.h  iatomic.h  input.h  instr.h  list.h  local.h  mixer.h  mixer_abst.h  mixer_m4.h  mixer_ordinary.h  mixer_simple.h  output.h  pcm.h  pcm_external.h  pcm_extplug.h  pcm_ioplug.h  pcm_m4.h  pcm_old.h  (+21 more)
include/sound/: Makefile.am  ainstr_fm.h  ainstr_gf1.h  ainstr_iw.h  ainstr_simple.h  asequencer.h  asoc.h  asound.h  asound_fm.h  emu10k1.h  hdsp.h  hdspm.h  sb16_csp.h  type_compat.h
include/sound/uapi/: Makefile.am  asequencer.h  asoc.h  asound.h  emu10k1.h  hdsp.h  sb16_csp.h
modules/mixer/simple/: Makefile.am  ac97.c  hda.c  python.c  sbase.c  sbase.h  sbasedl.c
src/: Makefile  Makefile.am  Makefile.in  Versions  Versions.in  Versions.in.in  alsa.conf  async.c  conf.c  confeval.c  confmisc.c  dlmisc.c  error.c  input.c  names.c  output.c  shmarea.c  socket.c  use-case.c  userfile.c
src/alisp/: Makefile.am  alisp.c  alisp_local.h  alisp_snd.c
src/aserver/: Makefile.am  aserver.c
src/cards/: CMI8738.conf  CMIPCI.conf  EMU10K1.conf  ENS1370.conf  FM801.conf  ICE1712.conf  INTEL8X0.conf  Makefile.am  SI_7018.conf  TRID4DWAVENX.conf  YMFPCI.conf
src/compat/: Makefile.am  hsearch_r.c
src/conf/: Makefile.am  alsa.conf  conf.c  smixer.conf  sndo-mixer.alisp
src/conf/cards/: AACI.conf  ATIIXP-MODEM.conf  ATIIXP-SPDMA.conf  ATIIXP.conf  AU8810.conf  AU8820.conf  AU8830.conf  Audigy.conf  Audigy2.conf  AudigyLS.conf  Aureon51.conf  Aureon71.conf  Azalia.conf  CA0106.conf  CMI8338-SWIEC.conf  CMI8338.conf  CMI8738-MC6.conf  CMI8738-MC8.conf  CMI8738.conf  CMI8788.conf  CMIPCI.conf  CS46xx.conf  EMU10K1.conf  EMU10K1X.conf  ENS1370.conf  ENS1371.conf  ES1968.conf  Echo_Echo3G.conf  FM801.conf  FWSpeakers.conf  FireWave.conf  GUS.conf  HDA-Intel.conf  HdmiLpeAudio.conf  ICE1712.conf  ICE1724.conf  ICH-MODEM.conf  ICH.conf  ICH4.conf  Loopback.conf  (+29 more)
src/conf/ctl/: Makefile.am  default.conf
src/conf/pcm/: Makefile.am  center_lfe.conf  default.conf  dmix.conf  dsnoop.conf  front.conf  iec958.conf  modem.conf  rear.conf  side.conf  surround21.conf  surround40.conf  surround41.conf  surround50.conf  surround51.conf  surround71.conf
src/conf/topology/: Makefile.am
src/conf/ucm/: Makefile.am
src/control/: Makefile  Makefile.am  Makefile.in  bag.c  cards.c  cards.conf  cards_id.c  control.c  control_client.c  control_empty.c  control_ext.c  control_hw.c  control_local.h  control_m4.c  control_plugin.c  control_remap.c  control_shm.c  control_symbols.c  controls.c  ctlparse.c  defaults.c  eld.c  hcontrol.c  namehint.c  setup.c  tlv.c
src/hwdep/: Makefile.am  hwdep.c  hwdep_hw.c  hwdep_local.h  hwdep_m4.c  hwdep_symbols.c
src/instr/: Makefile.am  fm.c  iwffff.c  simple.c
src/mixer/: Makefile  Makefile.am  Makefile.in  bag.c  elements.c  mixer.c  mixer_local.h  mixer_m4.c  mixer_simple.h  simple.c  simple_abst.c  simple_none.c
src/mixer/simple/: Makefile.am  ac97.c
src/ordinary_mixer/: Makefile.am  ordinary_mixer.c
src/ordinary_pcm/: Makefile.am  ordinary_pcm.c
src/pcm/: Makefile  Makefile.am  Makefile.in  atomic.c  atomic.h  interval.c  interval.h  interval_inline.h  ladspa.h  mask.c  mask.h  mask_inline.h  pcm.c  pcm_adpcm.c  pcm_alaw.c  pcm_asym.c  pcm_client.c  pcm_common.c  pcm_copy.c  pcm_direct.c  pcm_direct.h  pcm_dmix.c  pcm_dmix_generic.c  pcm_dmix_i386.c  pcm_dmix_i386.h  pcm_dmix_x86_64.c  pcm_dmix_x86_64.h  pcm_dshare.c  pcm_dsnoop.c  pcm_empty.c  pcm_ext_parm.h  pcm_extplug.c  pcm_file.c  pcm_generic.c  pcm_generic.h  pcm_hooks.c  pcm_hw.c  pcm_iec958.c  pcm_ioplug.c  pcm_jack.c  (+30 more)
src/rawmidi/: Makefile  Makefile.am  Makefile.in  rawmidi.c  rawmidi_hw.c  rawmidi_local.h  rawmidi_m4.c  rawmidi_symbols.c  rawmidi_virt.c  ump.c  ump_local.h
src/seq/: Makefile.am  seq.c  seq_event.c  seq_hw.c  seq_local.h  seq_midi_event.c  seq_priv.h  seq_symbols.c  seqmid.c
src/simple_mixer/: Makefile.am  simple_mixer.c
src/simple_pcm/: Makefile.am  simple_pcm.c
src/timer/: Makefile.am  timer.c  timer_hw.c  timer_local.h  timer_query.c  timer_query_hw.c  timer_symbols.c
src/topology/: Makefile.am  Versions  builder.c  channel.c  ctl.c  dapm.c  data.c  decoder.c  elem.c  log.c  ops.c  parser.c  pcm.c  save.c  text.c  tplg_local.h
src/ucm/: Makefile.am  main.c  parser.c  ucm_cond.c  ucm_confdoc.h  ucm_exec.c  ucm_include.c  ucm_local.h  ucm_regex.c  ucm_repeat.c  ucm_subs.c  utils.c
test/: Makefile  Makefile.am  Makefile.in  README.aconnect  README.aseqnet  aconnect.1  aconnect.c  aseqnet.1  aseqnet.c  audio_time.c  cardid.c  chmap.c  code.c  control.c  iecbits.c  iecset.c  latency.c  loopback.c  midifile.3  midifile.c  midifile.h  midiloop.c  mixer.c  mixtest.c  namehint.c  oldapi.c  omixer.c  pause.c  pcm-multi-thread.c  pcm.c  pcm_min.c  pcmtest.c  playmidi1.c  queue_timer.c  rawmidi.c  seq-decoder.c  seq-sender.c  seq-ump-example.c  seq.c  switches.c  (+3 more)
test/features/: Makefile.am  pcm.c  test.h
test/lsb/: Makefile.am  config.c  midi_event.c
(+121 files in other folders)
