alsadir = $(datadir)/alsa/cards
cfg_files = aliases.conf SI7018.conf EMU10K1.conf Audigy.conf TRID4DWAVENX.conf ENS1370.conf \
	    ICH.conf YMF744.conf FM801.conf ICE1712.conf CMI8338.conf CMI8738-MC6.conf \
	    RME9636.conf RME9652.conf GUS.conf

EXTRA_DIST = $(cfg_files)
alsa_DATA = $(cfg_files)
