alsadir = $(datadir)/alsa/cards
cfg_files = aliases.conf \
	Audigy.conf \
	CMI8338.conf \
	CMI8738-MC6.conf \
	CS46xx.conf \
	EMU10K1.conf \
	ENS1370.conf \
	ENS1371.conf \
	FM801.conf \
	GUS.conf \
	ICE1712.conf \
	ICE1724.conf \
	ICH.conf \
	NFORCE.conf \
	RME9636.conf \
	RME9652.conf \
	SI7018.conf \
	TRID4DWAVENX.conf \
	YMF744.conf \
	VIA8233.conf \
	VIA8233A.conf \
	VX222.conf \
	VXPocket.conf \
	VXPocket440.conf

EXTRA_DIST = $(cfg_files)
alsa_DATA = $(cfg_files)
